--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "opgp-bomberman"
 version = "0.1.0"
 description = ""
 authors = [
-    {name = "Your Name",email = "you@example.com"}
+    {name = "RealReinor",email = "viliampavlovsky08@gmail.com"}
 ]
 readme = "README.md"
 requires-python = ">=3.13"
@@ -11,6 +11,8 @@ dependencies = [
     "pygame (>=2.6.1,<3.0.0)"
 ]
 
+[tool.poetry]
+package-mode = false
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
